updates for internal journey

--- a/app/views/create-event/load-previous-additional-questions.html
+++ b/app/views/create-event/load-previous-additional-questions.html
@@ -97,8 +97,7 @@
 
 		  <div class="form-group" style="margin-top:30px">
 
-			  <input type="submit" class="button" formaction="/create-event/additional-questions" value="Save and add another">
-			  <p style="margin-top:30px"><a href="/create-event/additional-questions">Skip this and continue</a></p>
+			  <input type="submit" class="button" formaction="/create-event/additional-questions" value="Save and continue">
 
 		  </div>
 
