updates to questions

--- a/app/views/create-event/load-previous-additional-questions.html
+++ b/app/views/create-event/load-previous-additional-questions.html
@@ -81,11 +81,15 @@
 				  <div class="" style="margin-top:5px">
 					  <div class="multiple-choice" style="margin-bottom:10px">
 						  <input id="radio-mandatory-no" type="checkbox" name="radio-additional-question-mandatory" value="no" >
-						  <label for="radio-mandatory-no">Do you have an ITA</label>
+						  <label for="radio-mandatory-no">Are you currently exporting?</label>
 					  </div>
 					  <div class="multiple-choice" style="margin-bottom:10px">
 						  <input id="radio-mandatory-yes" type="checkbox" name="radio-additional-question-mandatory" value="yes">
-						  <label for="radio-mandatory-yes">Do you have any food allergies</label>
+						  <label for="radio-mandatory-yes">What is the annual turnover for your business?</label>
+					  </div>
+					  <div class="multiple-choice" style="margin-bottom:10px">
+						  <input id="radio-mandatory-yes" type="checkbox" name="radio-additional-question-mandatory" value="yes">
+						  <label for="radio-mandatory-yes">Do you have any food allergies?</label>
 					  </div>
 				  </div>
 			  </div>
