--- a/app/views/register/check-your-answers.html
+++ b/app/views/register/check-your-answers.html
@@ -43,7 +43,7 @@
             Name
           </dt>
           <dd class="cya-answer">
-            Astana 2017
+            {{ data['event-title'] }}
           </dd>
           <dd class="cya-change">
             
@@ -55,8 +55,8 @@
             Date and time 
           </dt>
           <dd class="cya-answer">
-            11 May 2017 <br />
-            11:00 to 17:00<br />
+            {{ session.data['event-day'] }} {{ session.data['event-month-name'] }} {{ session.data['event-year'] }} <br />
+            {{ session.data['event-start-time'] }} to {{ session.data['event-finish-time'] }}<br />
           </dd>
           <dd class="cya-change">
             
@@ -67,10 +67,7 @@
           <dt class="cya-question">
             Venue address 
           </dt>
-          <dd class="cya-answer">
-            Venue Name <br />
-            Address <br />
-          </dd>
+          <dd class="cya-answer" style="white-space: pre-wrap;">{{ data['full-address-holder'] }}</dd>
           <dd class="cya-change">
             
           </dd>
@@ -225,20 +222,19 @@
 
 <!-- REGISTRATION QUESTIONS -->
         <h2 class="heading-medium">
-        Registration questions
-        {{ data['question0'] }}
-        
-      </h2>
-     <!--  <h2 class="heading-small">
-        Ticket 1
-      </h2> -->
+        Registration questions </h2>
+       
+  
       <dl class="govuk-check-your-answers cya-questions-short">
+         {% for key,value in data %}
+        {% if "question--" in key %}
+        {% if value[2] %}
         <div>
           <dt class="cya-question">
-            Full name
+            {{ value[0]}}            
           </dt>
           <dd class="cya-answer">
-            {{ data['full-name'] }}
+            {{ value[2]}}<br />{{ value[3]}}
           </dd>
           <dd class="cya-change">
             <a href="#">
@@ -246,59 +242,21 @@
             </a>
           </dd>
         </div>
-
-        <div>
-          <dt class="cya-question">
-            Job title
-          </dt>
-          <dd class="cya-answer">
-            {{ data['job-title'] }}
-          </dd>
-          <dd class="cya-change">
-            <a href="#">
-              Change<span class="visually-hidden"> date of birth</span>
-            </a>
-          </dd>
-        </div>
-
-        <div>
-          <dt class="cya-question">
-            Email
-          </dt>
-          <dd class="cya-answer">
-            {{ data['email-address'] }}
-          </dd>
-          <dd class="cya-change">
-            <a href="#">
-              Change<span class="visually-hidden"> home address</span>
-            </a>
-          </dd>
-        </div>
-
-        <div>
-          <dt class="cya-question">
-            Phone number
-          </dt>
-          <dd class="cya-answer">
-            {{ data['phone-number'] }}<br />
-            Yes to text reminders on this number
-          </dd>
-          <dd class="cya-change">
-            <a href="#">
-              Change<span class="visually-hidden"> contact details</span>
-            </a>
-          </dd>
-        </div>
+        {% endif %}
+        {% endif %}
+{% endfor %}
       </dl>
 
+<!-- POLICY TO BE AGREED
       <h2 class="heading-medium">Booking your event</h2>
 
       <p class="text">
         By continuing you accept that the information provided may be shared with DIT trade advisers who might contact you in regards your export needs. 
       </p>
+-->
 
-      <div class="form-group">
-        <a href="confirmation-page" class="button button-blue">Confirm and book event</a>
+      <div class="form-group" style="margin-top:50px">
+        <a href="confirmation-page" class="button button-blue">Book event</a>
       </div>
 
     </form>
