update to panel

--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -103,7 +103,7 @@ Email: events@businesswest.co.uk
         </ul>
       </div>
 
-      <div class="panel">
+      <div class="panel panel--info">
         <ul>
         <div class="bold-xsmall">Agenda</div>
         <li style="white-space: pre-wrap;">{{ data['agenda'] }}</li>
