--- a/app/views/register/business-sector.html
+++ b/app/views/register/business-sector.html
@@ -20,7 +20,24 @@
 </li>
 {% endmacro %}
 
+		
+
 <main id="content" role="main">
+	{% if errorMissingTitle %}
+		<div class="grid-row">
+		<div class="error-summary column-two-thirds" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1" style="border:6px solid #e41f13">
+
+			<h2 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
+				Missing sector
+			</h2>
+
+			<ul class="error-summary-list">
+					<li><a href="#sector-section" style="color:#e41f13">You need to select a sector</a></li>
+			</ul>
+
+		</div>
+		</div>
+		{% endif %}
 	  <h1 class="heading-large" >
 		  Which sector does your business operate in?
       </h1>
@@ -33,7 +50,7 @@
 	  </div>
 
 
-	  <form action="" method="get" class="form">
+	  <form action="" method="post" class="form">
 
 			  <fieldset class="form-group {% if 0 < session.previousQuestions.length  and
 			  									(errorQuestionEmpty == undefined or errorQuestionEmpty == false) and
@@ -52,26 +69,34 @@ ul#sectors li {border-top:1px solid #bfc1c3;padding:15px 30px 43px 10px;}
 
 {% set items = ["Aerospace","Agriculture, Horticulture and fisheries","Airports","Automotive","Biotechnology and pharmaceuticals","Business Consumer Services","Chemicals","Clothing, Footwear Fashion","Communications","Construction","Creative and Media","Education and Training","Electronics and IT Hardware","Environment","Financial and Professional Services","Food and Drink","Giftware, Jewellery Tableware","Global Sports Infrastructure","Healthcare Medical","Household Goods, Furniture Furnishings","Leisure Tourism","Marine","Mechanical Electrical Process Engineering","Metallurgical Process Plant","Metals, Minerals and Materials","Mining","Oil and Gas","Ports Logistics","Power","Railways","Renewable Energy","Retail and Luxury","Security","Software and computer Services","Textiles, Interior Textiles and Carpets","Water"] %}
 
-<div class="form-group">
-<label class="form-label" for="question">
-						  Type a keyword or select from the list
-						  {% if errorQuestionEmpty %}
-									<span class="error-message">
-										Attendee question missing
-									</span>
-						  {% endif %}
-					  </label>
-<input class="form-control " id="myInput" type="text" onkeyup="myFunction()" style="width:75%" value="">
+<div class="form-group" id="sector-section">
+	{% if errorMissingTitle %}
+				  	<div class="form-group-error">
+				  {% endif %}
+				  {% if errorMissingTitle %}
+						  <span class="error-message">
+							  Select one sector
+						  </span>
+					  {% endif %}
+						<label class="form-label" for="question"> Type a keyword or select a sector from the list
+						</label>
+					  
+
+<input class="form-control " id="myInput" type="text" onkeyup="myFunction()" style="width:75%" value="" autocomplete="off" />
+
 <ul id="sectors">
 {% for i in items %}
  {{ createSectorList(i) }}
  {% endfor %}
 </ul>
+ <span id="empty">No sectors matching these keywords. <br />Please try changing your keyword or <a class="link" href="#" onclick="resetInput()">show the full list of sectors</a></span>
+ {% if errorMissingTitle %}
+			  		</div>
+				  {% endif %}
 </div>
 			</fieldset>
 		  <div class="form-group">
-
-			  <input type="submit" class="button button-blue" formaction="/register/ticket-details" value="Continue">
+			  <input type="submit" class="button button-blue"  value="Continue">
 		  </div>
 
 
@@ -90,25 +115,40 @@ ul#sectors li {border-top:1px solid #bfc1c3;padding:15px 30px 43px 10px;}
 </main>
 
 <script>
-
 function myFunction() {
     // Declare variables
     var input, filter, ul, li, a, i;
+
     input = document.getElementById('myInput');
     filter = input.value.toUpperCase();
     ul = document.getElementById("sectors");
     li = ul.getElementsByTagName('li');
-
+    emptyMessage = document.getElementById("empty");
+    emptyMessage.style.display = "block";
     // Loop through all list items, and hide those who don't match the search query
     for (i = 0; i < li.length; i++) {
         label = li[i].getElementsByTagName("label")[0];
         if (label.innerHTML.toUpperCase().indexOf(filter) > -1) {
             li[i].style.display = "";
+            emptyMessage.style.display = "none";
+            
+
         } else {
             li[i].style.display = "none";
         }
     }
+
 }
+
+function resetInput () {
+	var input;
+    input = document.getElementById('myInput');
+    input.value = "";
+    myFunction();
+}
+
+window.onload = myFunction(); 
+
 </script>
 
 
