updates for external journey

--- a/app/views/includes/draft-events.html
+++ b/app/views/includes/draft-events.html
@@ -57,7 +57,7 @@
 
     <td valign="top" style=" border: 0px; padding-right: 0px; padding-top: 2px; padding-bottom: 12px;">
       <details style="display:inline;">
-        <summary><span class="summary">More options</span></summary>
+        <summary><span class="summary">Make changes</span></summary>
         <div class="panel panel-border-narrow">
           <ul>
             <li style="margin-bottom:3px;"><span>Share draft: </span>&nbsp;www.great.gov.uk/event/mh43dz</li>
