--- a/app/views/register/ticket-details.html
+++ b/app/views/register/ticket-details.html
@@ -113,7 +113,7 @@
 
 				  <div class="form-group form-control-2-3 {% if errorQuestionEmpty%} form-group-error {% endif %}">
 					  <label class="form-label" for="question">
-						  Full name
+						  First name
 						  {% if errorQuestionEmpty %}
 									<span class="error-message">
 										Attendee question missing
@@ -122,7 +122,22 @@
 					  </label>
 					  <div id="show-new-question" style="width:100%;  margin-bottom:0px;">
 						  <input type="text" class="form-control  {% if errorQuestionEmpty %} form-control-error {% endif %}"
-								 id="full-name" name="full-name" value="" style="width:80%;">
+								 id="full-name" name="first-name" value="" style="width:80%;">
+					  </div>
+				  </div>
+
+				   <div class="form-group form-control-2-3 {% if errorQuestionEmpty%} form-group-error {% endif %}">
+					  <label class="form-label" for="question">
+						  Last name
+						  {% if errorQuestionEmpty %}
+									<span class="error-message">
+										Attendee question missing
+									</span>
+						  {% endif %}
+					  </label>
+					  <div id="show-new-question" style="width:100%;  margin-bottom:0px;">
+						  <input type="text" class="form-control  {% if errorQuestionEmpty %} form-control-error {% endif %}"
+								 id="full-name" name="last-name" value="" style="width:80%;">
 					  </div>
 				  </div>
 
