--- a/app/views/includes/live-events.html
+++ b/app/views/includes/live-events.html
@@ -51,7 +51,7 @@
 
       <td valign="top" style=" border: 0px; padding-right: 0px; padding-top: 2px; padding-bottom: 12px;">
         <details style="display:inline;">
-          <summary><span class="summary">More options</span></summary>
+          <summary><span class="summary">Make changes</span></summary>
           <div class="panel panel-border-narrow">
             <ul>
               <li style="margin-bottom:3px;"><a href="/summary-data/{{itemRow}}/true">Edit page</a></li>
