--- a/app/views/includes/great-header.html
+++ b/app/views/includes/great-header.html
@@ -147,19 +147,20 @@ main#content {max-width: 1200px}
             </div>
           </div>
         </div>
+
+
       </div>
+
+
     </div>
 
 
-    <div class="govuk-beta-label" style="margin: 0 40px">
-  <p style="
-font-size: 14px;
-    padding: 10px 0;
-    border-bottom: 1px solid #DDD;">
-    <strong class="phase-tag">Alpha</strong>
-    <span>This is a new service – your <a href="#">feedback</a> will help us to improve it.</a>.
-
-
-    </span>
-  </p>
-</div>
+    <div class="govuk-beta-label" style="max-width: 1200px; margin-left: auto; margin-right: auto;">
+      <p style="
+        font-size: 14px;
+        padding: 10px 0;
+        border-bottom: 1px solid #DDD;">
+        <strong class="phase-tag">Alpha</strong>
+        <span>This is a new service – your <a href="#">feedback</a> will help us to improve it.</a>.</span>
+      </p>
+    </div>
