--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -40,13 +40,6 @@
 
         <div style="display: flex; flex-direction: row; ">
 
-            <!--
-            <div style="width:22%; background-color: #F5F2ED; border: 1px solid #DFD5C5;  padding: 12px 5px 15px 2px; margin-bottom:30px; margin-right:35px;">
-                <h4 style="font-size:16px; margin-bottom:5px;" align="center">Cost</h4>
-                <p class="bold" style="font-size:16px; margin: 0px;" align="center">Free</p>
-            </div>
-            -->
-
             <div style="width:32%; background-color: #F5F2ED; border: 1px solid #DFD5C5;  padding: 12px 5px 12px 5px; margin-bottom:30px; margin-right:45px; ">
                 <h4 style="font-size:16px; margin-bottom:3px;" align="center">Sectors</h4>
                 <p class="bold" style="font-size:16px; margin: 0px;" align="center">{{ data['sectors'] }}</p>
@@ -70,14 +63,13 @@
           <br/>
           <div style="display: flex; flex-direction: row;" >
               <a href="/register" class="button button-blue">Register</a>
-              <p style="padding-top:15px; margin-left: 25px; margin-bottom:0px; font-family: arial, helvetica, sans-serif; font-weight: 500; font-size: 18px;">Cost: free</p>
+              <p style="padding-top:15px; margin-left: 25px; margin-bottom:0px; font-family: arial, helvetica, sans-serif; font-weight: 500; font-size: 18px;">Free event</p>
           </div>
 
 
-          <br/>
           <hr style="background-color:#DDD">
 
-            <div style="margin-bottom:35px;">
+            <div style="margin-bottom:35px; margin-top:40px;">
                 <h4 class="bold-small">Event outcomes</h4>
                 <ul class="list push--bottom">
                     {% for key,value in data %}
@@ -95,24 +87,23 @@
 
 
 
-
-
           <div style="margin-bottom:50px;">
               <h4 class="bold-small">Further details and background</h4>
               <p style="white-space: pre-wrap;" id="event-description">{{ data['event-description'] }}</p>
 
-              <a href="/register" class="button button-blue" style="margin:10px 0 0 0">Register</a>
-
               <br/>
+              <div style="display: flex; flex-direction: row;" >
+                  <a href="/register" class="button button-blue">Register</a>
+                  <p style="padding-top:15px; margin-left: 25px; margin-bottom:0px; font-family: arial, helvetica, sans-serif; font-weight: 500; font-size: 18px;">Free event</p>
+              </div>
+
               <br/>
               <hr style="background-color:#DDD">
           </div>
 
 
 
-
-
-          <h4 class="bold-small" style="margin-top:50px">Partners</h4>
+          <h4 class="bold-small" style="margin-top:50px;">Partners</h4>
           <div style="display: flex;  flex-direction: row; margin-bottom:50px;">
               {% if data['eu-logo-selected'] %}
                   <div style="width:23%; margin-right:20px;">
@@ -176,9 +167,8 @@
                     <p class="link-style"><a href="https://www.google.co.uk/maps/place/University+of+Exeter+Innovation+Centre/@50.7384791,-3.5323014,17z/data=!3m1!4b1!4m5!3m4!1s0x486da4430cc4d16f:0xec0fc5491010f1f4!8m2!3d50.7384791!4d-3.5301074">View on a map</a></p>
                     <p>{{ data['venue-additional-notes'] }}</p>
                 </div>
-
-
       </div>
+
 
       <div class="panel" style="background-color: #F5F2ED; border: 1px solid #DFD5C5; border-top-color: #132965; border-top-width: 8px; margin-bottom:30px;">
           <ul>
@@ -186,6 +176,7 @@
               <li style="white-space: pre-wrap;">{{ data['agenda'] }}</li>
           </ul>
       </div>
+
 
       <div class="panel" style="background-color: #F5F2ED; border: 1px solid #DFD5C5; border-top-color: #132965; border-top-width: 8px; margin-bottom:30px;">
           <ul>
