--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,10 +26,12 @@
 
       <ul>
         <li><a href="/scenario-1">Scenario one</a></li>
-        <br />
+        <br/>
         <li><a href="/scenario-2">Event details page example (generic)</a></li>
-        <br />
+        <br/>
         <li><a href="/scenario-3">Event details page example (food and drink)</a></li>
+        <br/>
+        <li><a href="/scenario-4">Event details page example (Germany - retail)</a></li>
       </ul>
 
       <br>
